SSR Ver-3.3 修改部分内容

--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -128,8 +128,8 @@
         <section id="passage">
             <div class="centralImg" id="title">
                 <img src="SSRimg.png" width="50%" alt="SSR的图标" id="icon">
-                <h2>最后更新：2020年2月25日10:23</h2>
-                <h2>更新内容：太多了 Ver-3.2</h2>
+                <h2>最后更新：2020年2月25日14:33</h2>
+                <h2>更新内容：增加Windows部分的解释 Ver-3.3</h2>
             </div>
 
             <div class="line"></div>
@@ -169,7 +169,7 @@
                 <ul>
                     <li>访问本不存在的网站，如Google和Twitter</li>
                     <li>提高不稳定访问状态的外网网站的访问速度和稳定性，如GitHub和Microsoft</li>
-                    <li>改变IP地址，可用于观看B站仅限港澳台的番剧，也可用于突破部分网站或游戏锁IP的限制，如P站锁日本IP（据说）</li>
+                    <li>改变IP地址，可用于观看B站仅限港澳台的番剧，也可用于突破部分网站或游戏锁IP的限制</li>
                     <li>改善origin和steam的连接，解决各种乱七八糟的报错问题（如创意工坊无法访问，好友系统离线等等）</li>
                     <li>替代游戏加速器，不过一般加速效果很有限</li>
                 </ul>
@@ -278,11 +278,14 @@
                 </p>
                 <p>打开连接统计，有两种方法，第一种是中键SSR任务栏图标，第二种是右键任务栏图标，在菜单中找服务器——连接统计。</p>
                 <img src="win_7.png" width="100%" alt="连接统计页面">
-                <p>连接统计里会有很详细的节点信息。平均下载速度其实就是当前通过SSR的流量速度，总下载是这个节点所有时间的下载量，实下载是本次使用SSR这个节点的下载量。要切换节点的话，在服务器那一栏左键点你想挂的节点就行了。
+                <p>连接统计里会有很详细的节点信息。平均下载速度其实就是当前通过SSR的流量速度，总下载是这个节点所有时间的下载量，实下载是本次使用SSR这个节点的下载量。要切换节点的话，在服务器那一列点你想挂的节点就行了（注意不是点序号那一列），切换成功的话，服务器那里是会变成绿色的。
                 </p>
+                <br>
+                <p>关于查看节点可用性，可以切换节点后，打开Google或一个需要翻墙的网页进行检测，如果表中右侧没有出现红色报错信息的话，那就说明节点可用。另外，SSR只有在有流量经过后才会显示延迟，所以切换节点后是不会实时显示延迟的，需要打开一个需要翻墙的网页。</p>
+                <img src="win_9.png" width="100%" alt="连接报错页面">
                 <p><br>在这着重强调下<strong>节点名字的含义</strong>，也就是服务器那一栏。虽然每个机场可能给节点的命名规则不一样，但大同小异，具体的可以参考机场的公告。</p>
                 <ul>
-                    <li>名字前面的地区一般决定了你的IP地址段，这个针对部分锁IP的网站和游戏，比如P站会限制特定IP区间的流量才能访问，一般挂日本地区的节点就没什么大问题，但是你挂香港节点有可能就连不上。
+                    <li>名字前面的地区一般决定了你的IP地址段，这个针对部分锁IP的网站和游戏，比如YouTube部分日本视频会限制特定日本IP区间的流量才能访问，一般挂日本地区的节点就没什么大问题，但是你挂香港节点有可能就连不上。
                     </li>
                     <li>名字后面的数字加乘号，表示机场的流量统计方式。拿图中我挂着的这个节点为例，后面写着20x，那么你实下载1M的流量，在机场那统计的流量使用量是1M x 20
                         =20M，因为深港专线服务器租赁费用比较高，能提供更快的连接速度和防止被墙。平时使用时要格外注意，防止发生我朋友一天烧了80G流量的类似悲剧。</li>
@@ -391,7 +394,7 @@
                         <p style="word-break: break-all; color: #6495ED;">
                             ssr://My44NC4yMjEuMTE0OjcyNzI6YXV0aF9zaGExX3Y0OmFlcy0yNTYtY2ZiOnBsYWluOmMyOXlZWEJoWjJVLz9vYmZzcGFyYW09JnJlbWFya3M9UVZkVExlZS1qdVdidlEmZ3JvdXA9VTI5eVlWQmhaMlU
                         </p>
-                        <p>PS:复制，在SSR客户端中选择从剪切板导入节点。</p>
+                        <p>PS:复制，打开SSR的APP会有提示，或在SSR客户端中选择从剪切板导入节点。</p>
                         <p>目前在考虑搭建第二个节点，应该是架在日本，等另一位CUHK的大佬有空后再说。</p>
                         <p>希望各位理性使用，如果超出了使用额度，服务器会被收回。</p>
                     </div>
