--- a/index.html
+++ b/index.html
@@ -23,29 +23,28 @@
             text-decoration: none;
         }
 
-        #tableBackground {
-            height: 100%;
-            width: 100%;
-            display: table;
-        }
-
         #background {
-            background-image: url(indexBackground.jpg);
-            background-size: cover;
-            display: table-cell;
-            height: 100%;
+            position: fixed;
             width: 100%;
-            vertical-align: middle;
+            height: 100%;
+            object-fit: cover;
+            object-position: 27% 0;
             opacity: 0.8;
+            z-index: -1;
         }
 
-        #background h1 {
-            margin: 0;
+        #flexContainer {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        h1 {
             font-weight: bolder;
             font-size: 100px;
             color: white;
-            text-align: center;
-            opacity: 1;
             text-shadow: -2px -2px 10px rgba(0, 0, 0, 0.3);
         }
     </style>
@@ -61,12 +60,9 @@
 </head>
 
 <body>
-    <div id="tableBackground">
-        <div id="background">
-            <a href="./homepage/homepage.html">
-                <h1>SoraPage</h1>
-            </a>
-        </div>
+    <img src="indexBackground.jpg" id="background">
+    <div id="flexContainer">
+        <a href="/homepage/homepage.html"><h1>SoraPage</h1></a>
     </div>
 </body>
 
