SSR Ver-3.4 后记删改 win可从服务器下载客户端

--- a/aboutWebsite/developmentLog/developmentLog.html
+++ b/aboutWebsite/developmentLog/developmentLog.html
@@ -49,39 +49,34 @@
                             <h1>2020.01.29</h1>
                             <p>评论系统更换为Valine、启用HTTPS</p>
                         </li>
+                        <li>
+                            <h1>2020.02.23</h1>
+                            <p>完成第一个自制JavaScript</p>
+                        </li>
                     </ul>
                 </div>
                 <div id="seeMore">
                     <img src="github.svg" width="10%">
-                    <a href="https://github.com/Sora-Sou/SoraPage/commits/master">查看更多</a>
+                    <a href="https://github.com/Sora-Sou/SoraPage/commits/master" target="_blank">查看更多</a>
                 </div>
             </div>
             <!--右栏开发日志-->
             <div id="contentRight">
                 <div id="allLogs">
                     <div class="log">
-                        <h1>2020.1.28</h1>
-                        <p>
-                            昨天整的HomePage和今天码一天的开发日志页面，总算是框架成型了，全部采用flex布局。这玩意香倒是真的香，只不过代码量蹭蹭蹭地上涨。
-                            就这两个页面看起来非常非常简单基础的布局，每一个页面的CSS代码都在110行左右。姑且算是掌握了个flex的皮毛吧。
-                        </p>
-                        <p>晚上随手撸了个吐槽区的代码，极简极丑，等学会JS再去优化（自己写评论系统才是正道，严肃脸）。</p>
-                        <p>
-                            靠着仅仅一本书的HTML和CSS知识，局限性实在是太大了。接下来的几天还是应该再多多学习，JS得继续前进，还有我的TOEFL。（哭）
-                        </p>
+                        <h1>2020.2.17</h1>
+                        <p>记录下当前的一些信息</p>
+                        <ul>
+                            <li>JS学习方面：HeadFirst在几天前算是翻完了。这几天把JavaScript高级程序设计啃到了第8章（212/749），看的两章都很难理解，一个难点是对象的原型prototype，另一个是的函数的闭包closure，对于没有算法和数据结构基础、没有其他编程语言的背景知识的菜鸡本人而言，前前后后看了快10遍才勉强理解个大概。
+                            </li>
+                            <li>网站访问方面，从接入Google Analytics算起，所有页面浏览量5533，总计34人到访，共10条评论。</li>
+                            <li>网站页面方面：12个html页面，7个css文件，总计代码量1790+539=2329行，总计页面字数量10355个</li>
+                        </ul>
+                        <p>到今天为止，第二阶段的开发算是圆满结束，目前是打算等第三阶段写出JS后再公开网站。接下来就该重心转移了，GPA+N2+TOEFL。所以在暑假之前预计也不会有大的更新了。开学快落！</p>
                     </div>
                     <div id="dividingLine"></div>
 
                     <div class="log">
-                        <h1>2020.1.29</h1>
-                        <p>评论系统真的太难了，整了5家，从Gitment、Disqus、来必力、畅言再到最后决定下来的Valine，前两个国内被墙，畅言非要注册才能评论，就只有Valine勉强能用。</p>
-                        <p>但是Valine这个评论部署起来是真麻烦啊，debug一下午，才把评论通知的邮件系统搞明白，最后那个页面定位的bug还是靠猜，引入了jQuery才蒙对搞定的。</p>
-                        <p>不会JS还是硬伤，休息一会就去学JS。</p>
-                        <p>嗯，就玩一小会。（真香警告）</p>
-                    </div>
-                    <div id="dividingLine"></div>
-
-                    <div id="log">
                         <h1>2020.2.10</h1>
                         <p>有一阵子没更新开发日志了，虽然确实摸了几天鱼，但也是干了一些活儿，只是有点懒得总结前几天干了些啥。（今天来总结）</p>
                         <ul>
@@ -96,15 +91,25 @@
                     </div>
                     <div id="dividingLine"></div>
 
+                    <div id="log">
+                        <h1>2020.1.29</h1>
+                        <p>评论系统真的太难了，整了5家，从Gitment、Disqus、来必力、畅言再到最后决定下来的Valine，前两个国内被墙，畅言非要注册才能评论，就只有Valine勉强能用。</p>
+                        <p>但是Valine这个评论部署起来是真麻烦啊，debug一下午，才把评论通知的邮件系统搞明白，最后那个页面定位的bug还是靠猜，引入了jQuery才蒙对搞定的。</p>
+                        <p>不会JS还是硬伤，休息一会就去学JS。</p>
+                        <p>嗯，就玩一小会。（真香警告）</p>
+                    </div>
+                    <div id="dividingLine"></div>
+
                     <div id="logEnd">
-                        <h1>2020.2.17</h1>
-                        <p>记录下当前的一些信息</p>
-                        <ul>
-                            <li>JS学习方面：HeadFirst在几天前算是翻完了。这几天把JavaScript高级程序设计啃到了第8章（212/749），看的两章都很难理解，一个难点是对象的原型prototype，另一个是的函数的闭包closure，对于没有算法和数据结构基础、没有其他编程语言的背景知识的菜鸡本人而言，前前后后看了快10遍才勉强理解个大概。</li>
-                            <li>网站访问方面，从接入Google Analytics算起，所有页面浏览量5533，总计34人到访，共10条评论。</li>
-                            <li>网站页面方面：12个html页面，7个css文件，总计代码量1790+539=2329行，总计页面字数量10355个</li>
-                        </ul>
-                        <p>到今天为止，第二阶段的开发算是圆满结束，目前是打算等第三阶段写出JS后再公开网站。接下来就该重心转移了，GPA+N2+TOEFL。所以在暑假之前预计也不会有大的更新了。开学快落！</p>
+                        <h1>2020.1.28</h1>
+                        <p>
+                            昨天整的HomePage和今天码一天的开发日志页面，总算是框架成型了，全部采用flex布局。这玩意香倒是真的香，只不过代码量蹭蹭蹭地上涨。
+                            就这两个页面看起来非常非常简单基础的布局，每一个页面的CSS代码都在110行左右。姑且算是掌握了个flex的皮毛吧。
+                        </p>
+                        <p>晚上随手撸了个吐槽区的代码，极简极丑，等学会JS再去优化（自己写评论系统才是正道，严肃脸）。</p>
+                        <p>
+                            靠着仅仅一本书的HTML和CSS知识，局限性实在是太大了。接下来的几天还是应该再多多学习，JS得继续前进，还有我的TOEFL。（哭）
+                        </p>
                     </div>
                 </div>
             </div>
