--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -128,8 +128,7 @@
         <section id="passage">
             <div class="centralImg" id="title">
                 <img src="SSRimg.png" width="50%" alt="SSR的图标" id="icon">
-                <h2>最后更新：2020年2月25日14:33</h2>
-                <h2>更新内容：增加Windows部分的解释 Ver-3.3</h2>
+                <h2>最后更新：2020年3月4日18:07</h2>
             </div>
 
             <div class="line"></div>
@@ -239,6 +238,9 @@
                 <p><br><strong>Step-1:</strong>点下载链接后，在最新的那个release里下载图中的这个文件。如果你的电脑是32位的就下载Win32版本的，不知道自己电脑是多少位的话，可以去百度搜“区分32位和64位系统”，
                     一般不是特别老的电脑都是64位系统（直接下载红框内的那个）。</p>
                 <img src="win_1.png" width="70%" alt="github中SSR客户端下载界面">
+                <p>有小伙伴跟我抱怨说GitHub下载速度感人，这是因为没有科学上网，为了方便各位下载，我把5.1.8.3版本64位的SSR放在自己的服务器上供大家下载，但是我的服务器带宽只有5M，一个人下载时跑满速度也就800K每秒左右，但比GitHub应该还是要快一些的。
+                    <a href="SSRWin.zip">点此下载</a>
+                </p>
                 <p><br><strong>Step-2:</strong>下载后解压，打开exe文件，弹出来的提示框选否，会打开订阅设置</p>
                 <img src="win_2.png" width="30%" alt="提示框处理">
                 <p><br><strong>Step-3:</strong>登录机场，在机场首页找到SSR节点订阅地址，把地址复制下来（这是机场A页面的一部分）</p>
@@ -351,7 +353,7 @@
                             target="_blank">点击此处</a></p>
                     <p>安卓的APP安装包是以apk为后缀名的，所以挑最新的版本下载就OK</p>
                     <img src="android_1.png" width="90%">
-                    <p>但是貌似没翻墙的情况下直接从GitHub下载时，速度实在是感人，这里也可以直接从我的服务器上下载3.6.0版本的：<a href="SSRAndroid.apk">点此下载</a></p>
+                    <p>同样，考虑到GitHub下载速度的问题，这里也可以直接从我的服务器上下载3.6.0版本的：<a href="SSRAndroid.apk">点此下载</a></p>
 
                     <br>
                     <h2>Step-2 设置客户端</h2>
@@ -395,7 +397,6 @@
                             ssr://My44NC4yMjEuMTE0OjcyNzI6YXV0aF9zaGExX3Y0OmFlcy0yNTYtY2ZiOnBsYWluOmMyOXlZWEJoWjJVLz9vYmZzcGFyYW09JnJlbWFya3M9UVZkVExlZS1qdVdidlEmZ3JvdXA9VTI5eVlWQmhaMlU
                         </p>
                         <p>PS:复制，打开SSR的APP会有提示，或在SSR客户端中选择从剪切板导入节点。</p>
-                        <p>目前在考虑搭建第二个节点，应该是架在日本，等另一位CUHK的大佬有空后再说。</p>
                         <p>希望各位理性使用，如果超出了使用额度，服务器会被收回。</p>
                     </div>
                 </article>
@@ -403,11 +404,7 @@
 
                 <article id="postscript">
                     <h1>写在最后的碎碎念</h1>
-                    <p>这篇教程最初写于2020.1.24日，由于是Project的第一篇正式教程，写的时候难免有些激动，在3.0的版本中已经删除了大部分意义不明的话，并增加了安卓系统的教程，同时利用jQuery解决页面内href的跳转问题，增强了交互性（只不过代码量从1.0版本的250行涨到3.2版本的450行）
-                    </p>
-                    <p>预计会更新的部分：macOS系统SSR客户端教程、SSR进阶自建节点教程。目前还在码代码中...</p>
-                    <img src="/wholeSite/emoji/1.png" width="15%">
-                    <p>整个Project如果进展顺利，可能会在今年暑假阶段进行全面公布，有兴趣的小伙伴可以到<a href="https://github.com/Sora-Sou/SoraPage/commits/master">这里</a>来监工。</p>
+                    <p>这篇教程最初写于2020.1.24日，由于是Project的第一篇正式教程，写的时候难免有些激动，在3.0的版本中已经删除了大部分意义不明的话。</p>
                     <p>由于自己对SSR的了解也很肤浅，一些术语的解释可能存在偏差，如果大佬发现错误或者任何BUG，欢迎通过评论区、QQ或者邮箱sora@sorapage.com指教。</p>
                     <p>では、みんな、ありがとうございます。</p>
                 </article>
