wholeSite文件夹整理

--- a/aboutWebsite/commentArea/commentArea.html
+++ b/aboutWebsite/commentArea/commentArea.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <title>SoraPage-留言板</title>
-    <link rel="icon" href="/wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="/wholeSite/fixedHeader.css" />
+    <link rel="icon" href="/wholeSite/img/icon.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/fixedHeader.css" />
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <style>
         html,
@@ -115,7 +115,7 @@
                 }
             </script>
             <!-- 魔改 -->
-            <script src='/wholeSite/valineModify.js'></script>
+            <script src='/wholeSite/js/valineModify.js'></script>
             <style>
                 .vtime,
                 ::placeholder {
