--- a/aboutWebsite/skillTree/commentSystems/commentSystems.html
+++ b/aboutWebsite/skillTree/commentSystems/commentSystems.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-    <link rel="icon" href="../../../wholeSite/icon.png" type="image/x-icon">
+    <link rel="icon" href="/wholeSite/img/icon.png" type="image/x-icon">
     <title>SoraPage-评论系统</title>
-    <link type="text/css" rel="stylesheet" href="../../../wholeSite/fixedHeader.css" />
-    <link type="text/css" rel="stylesheet" href="../../../wholeSite/stripesLayout.css" />
-    <link type="text/css" rel="stylesheet" href="../../../wholeSite/prism.css" />
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/fixedHeader.css" />
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/stripesLayout.css" />
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/prism.css" />
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="../../../wholeSite/prism.js"></script>
+    <script src="/wholeSite/js/prism.js"></script>
     <style>
         #comparison table {
             margin-bottom: 1%;
@@ -242,7 +242,7 @@
                     }
                 </script>
                 <!-- 魔改 -->
-                <script src='/wholeSite/valineModify.js'></script>
+                <script src='/wholeSite/js/valineModify.js'></script>
                 <style>
                     .vtime,
                     ::placeholder {
