--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>SoraPage-HomePage</title>
-    <link rel="icon" href="../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="homepage.css?time=2020.1.30" media="screen and (min-device-width: 701px)" />
-    <link type="text/css" rel="stylesheet" href="homepageM.css?time=2020.1.30" media="screen and (max-device-width: 700px)" />
+    <link rel="icon" href="/wholeSite/img/icon.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="homepage.css" media="screen and (min-device-width: 701px)" />
+    <link type="text/css" rel="stylesheet" href="homepageM.css" media="screen and (max-device-width: 700px)" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
     <script>
