--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>SoraPage</title>
-    <link rel="icon" href="./wholeSite/icon.png" type="image/x-icon">
+    <link rel="icon" href="/wholeSite/img/icon.png" type="image/x-icon">
     <style>
         html,
         body {
