--- a/tutorial/dictionary/dictionary.html
+++ b/tutorial/dictionary/dictionary.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-    <link rel="icon" href="" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css">
-    <link type="text/css" rel="stylesheet" href="../../wholeSite/tutorialLayout.css">
+    <link rel="icon" href="/wholeSite/img/icon.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/fixedHeader.css" />
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/tutorialLayout.css" />
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <title>SoraPage</title>
     <style>
@@ -138,7 +138,7 @@
                     }
                 </script>
                 <!-- 魔改 -->
-                <script src='/wholeSite/valineModify.js'></script>
+                <script src='/wholeSite/js/valineModify.js'></script>
                 <style>
                     .vtime,
                     ::placeholder {
