--- a/aboutWebsite/skillTree/skillTree.html
+++ b/aboutWebsite/skillTree/skillTree.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css">
+    <link rel="icon" href="/wholeSite/img/icon.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/fixedHeader.css">
     <title>SoraPage-技能树</title>
     <style>
         html,
