--- a/tutorial/SSR/SSR.html
+++ b/tutorial/SSR/SSR.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <title>SoraPage-SSR教程</title>
-    <link rel="icon" href="../../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="../../wholeSite/fixedHeader.css" />
-    <link type="text/css" rel="stylesheet" href="../../wholeSite/tutorialLayout.css" />
+    <link rel="icon" href="/wholeSite/img/icon.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/fixedHeader.css" />
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/tutorialLayout.css" />
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <style>
         @media screen and (max-width: 800px) {
@@ -119,7 +119,7 @@
 <body>
     <header>
         <div id="headerWebname"> <a href="../../homepage/homepage.html">SoraPage</a> </div>
-        <img src="/wholeSite/upArrow.svg" id="goTop" title="返回顶部">
+        <img src="/wholeSite/svg/upArrow.svg" id="goTop" title="返回顶部">
         <div id="headerTitle">SSR教程</div>
     </header>
 
@@ -440,7 +440,7 @@
                 }
             </script>
             <!-- 魔改 -->
-            <script src='/wholeSite/valineModify.js'></script>
+            <script src='/wholeSite/js/valineModify.js'></script>
             <style>
                 .vtime,
                 ::placeholder {
