--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>SoraPage-教程</title>
-    <link rel="icon" href="../wholeSite/icon.png" type="image/x-icon">
-    <link type="text/css" rel="stylesheet" href="../wholeSite/fixedHeader.css" />
+    <link rel="icon" href="/wholeSite/img/icon.png" type="image/x-icon">
+    <link type="text/css" rel="stylesheet" href="/wholeSite/css/fixedHeader.css" />
     <style>
         .contentBorder {
             margin: 2% 10% 2% 10%;
