--- a/tutorial/tutorialCatalog.html
+++ b/tutorial/tutorialCatalog.html
@@ -52,12 +52,23 @@
         #background {
             position: fixed;
             z-index: -2;
-            top: 42px;
             left: 0;
             width: 100%;
             height: 100%;
             object-fit: cover;
             opacity: 0.9;
+        }
+
+        @media screen and (min-device-width: 801px) {
+            #background {
+                top: 43px;
+            }
+        }
+
+        @media screen and (max-device-width: 800px) {
+            #background {
+                top: 33px;
+            }
         }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
