--- a/aboutWebsite/skillTree/skillTree.html
+++ b/aboutWebsite/skillTree/skillTree.html
@@ -31,6 +31,10 @@
             background-color: rgb(114, 102, 186);
         }
 
+        section:nth-child(3n+3) h1 {
+            background-color: rgb(129, 200, 104);
+        }
+
         .introduction {
             padding: 1% 5% 2% 5%;
             border-bottom-left-radius: 7px;
@@ -103,6 +107,14 @@
                 <p>通过webhook可以实现往github进行push操作时，在设置了webhook的服务器上就能自动拉取最新的代码，省去了再次部署的麻烦。webhook的原理大同小异，不仅仅局限于宝塔面板。
                 </p>
                 <div class="href"><a href="./webhook/webhook.html">查看更多</a></div>
+            </div>
+        </section>
+
+        <section>
+            <h1>免费AWS申请和连接</h1>
+            <div class="introduction">
+                <p>利用亚马逊的教育账户，可以获得AWS每年100刀额度的使用经费，足够白嫖一整年的VPS了。</p>
+                <div class="href"><a href="./VPS/buildSSR/AWS/AWS.html">查看更多</a></div>
             </div>
         </section>
 
