--- a/aboutWebsite/skillTree/VPS/buildSSR/buildSSR.html
+++ b/aboutWebsite/skillTree/VPS/buildSSR/buildSSR.html
@@ -47,7 +47,7 @@
                 <h4 style="text-align: center;">最后更新：</h4>
                 <p>有关云服务器的叫法有很多，如ECS(Elastic Compute Service)，VPS(Virtual Private Server)等，我更习惯称其为VPS，下文中均将以VPS代指云服务器。
                 </p>
-                <p>VPS有很多是可以白嫖使用的，比如谷歌云（GCP）的新用户赠送1年300刀，再比如亚马逊云（AWS）利用edu邮箱可以每年100刀，这些平台由于在没有优惠时收费奇贵，所以用的人也不是很多，相关的教程也比较少。而这篇教程主要就是关注如何利用这些白嫖资源搭建SSR。
+                <p>VPS有很多是可以白嫖使用的，比如谷歌云（GCP）的新用户赠送1年300刀，再比如亚马逊云（AWS）利用edu邮箱可以每年100刀，这些平台由于在没有优惠时收费奇贵，所以用的人也不是很多，相关的教程也比较少，不过相应的好处就是这些平台的IP段很少被墙，搭起来的SSR会更稳定。而这篇教程主要就是关注如何利用这些白嫖资源搭建SSR。
                 </p>
             </div>
 
@@ -73,36 +73,6 @@
                 <p>软件要求方面，VPS的系统必须是CentOS 7或Ubuntu 18，其余系统未经过测试，不敢保证可用。</p>
             </div>
 
-            <div class="background_white" id="AWS">
-                <h2>AWS搭建SSR</h2>
-                <h3>Step-1：申请Educate账户</h3>
-                <p>在<a href="https://aws.amazon.com/cn/education/awseducate/"
-                        target="_blank">亚马逊教育官方网站</a>可以通过学校给的edu邮箱申请账户。照着填就是了，也没什么要讲的地方。唯一需要注意的地方是，在申请之后，需要等待亚马逊那边进行审核，1~2天的样子，耐心等待。
-                </p>
-                <img src="AWS_1.png">
-
-                <h3>Step-2：进入控制台</h3>
-                <p>申请成功之后，在教育官网登录你的账号，然后按照下面几张图的顺序进入控制台</p>
-                <img src="AWS_2.png" class="imgSeries">
-                <img src="AWS_3.png" class="imgSeries">
-                <img src="AWS_4.png" class="imgSeries">
-
-                <h3>Step-3：启动VPS</h3>
-                <p>教育用户被限制只能使用EC2型VPS，所以在控制台启动EC2虚拟机</p>
-                <img src="AWS_5.png">
-                <p><strong>步骤1：选择系统</strong> 教育用户还被限制只能使用特定种类的系统镜像，所以在界面往下滑，系统选择Ubuntu 18.04 LTS</p>
-                <img src="AWS_6.png"> 
-                <p><strong>步骤2：选择VPS机型</strong> 实例机型选择中，只能选择如下几种</p>
-                <p>考虑到一般VPS是365天全天运行的，因此100刀平摊到每个小时就是0.0114刀，能供选择的其实也就前两种机型了。</p>
-                <img src="AWS_7.png">
-                <img src="AWS_8.png">
-                <p><strong>步骤3、4、5：配置实例、添加储存、添加标签</strong> 都是直接下一步</p>
-                <p><strong>步骤6：配置安全组</strong> 放行所有流量，不然无法连接到VPS</p>
-                <img src="AWS_10.png"> 
-                <p><strong>步骤7：审核</strong> 启动即可</p>
-
-                <h3>Step-4：连接VPS</h3>
-            </div>
         </div>
     </div>
 </body>
