--- a/aboutWebsite/skillTree/skillTree.html
+++ b/aboutWebsite/skillTree/skillTree.html
@@ -15,7 +15,7 @@
             line-height: 2rem;
         }
 
-        section h1 {
+        article h1 {
             padding: 0 0 0 5%;
             border-top-left-radius: 7px;
             border-top-right-radius: 7px;
@@ -23,15 +23,15 @@
             line-height: 3rem;
         }
 
-        section:nth-child(3n+1) h1 {
+        article:nth-child(3n+1) h1 {
             background-color: rgb(93, 156, 236);
         }
 
-        section:nth-child(3n+2) h1 {
+        article:nth-child(3n+2) h1 {
             background-color: rgb(114, 102, 186);
         }
 
-        section:nth-child(3n+3) h1 {
+        article:nth-child(3n+3) h1 {
             background-color: rgb(129, 200, 104);
         }
 
@@ -42,7 +42,7 @@
             background-color: white;
         }
 
-        section p a {
+        article p a {
             width: 100%;
             text-align: end;
         }
@@ -90,35 +90,45 @@
         <div id="headerTitle">技能树</div>
     </header>
 
-    <div id="allContents">
+    <main id="allContents">
 
-        <section>
+        <article>
             <h1>第三方评论系统血泪史</h1>
             <div class="introduction">
                 <p>网站毫无疑问是需要评论系统的，但对于我这种只会一点点HTML和CSS的家伙来说，自己写是不可能的事情。于是就得借助第三方，前前后后试了5家，Gitment、Disqus、来必力、畅言、Valine。最后决定先用着Valine。这里简单谈谈各个评论系统的优劣以及重点说说Valine的设置方法。
                 </p>
                 <div class="href"><a href="./commentSystems/commentSystems.html">查看更多</a></div>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <h1>宝塔面板WebHook设置</h1>
             <div class="introduction">
                 <p>通过webhook可以实现往github进行push操作时，在设置了webhook的服务器上就能自动拉取最新的代码，省去了再次部署的麻烦。webhook的原理大同小异，不仅仅局限于宝塔面板。
                 </p>
                 <div class="href"><a href="./webhook/webhook.html">查看更多</a></div>
             </div>
-        </section>
+        </article>
 
-        <section>
+        <article>
             <h1>免费AWS申请和连接</h1>
             <div class="introduction">
                 <p>利用亚马逊的教育账户，可以获得AWS每年100刀额度的使用经费，足够白嫖一整年的VPS了。</p>
                 <div class="href"><a href="./VPS/buildSSR/AWS/AWS.html">查看更多</a></div>
             </div>
-        </section>
+        </article>
 
-    </div>
+        <article>
+            <h1>RE:从零开始的PHP+SQL本地开发</h1>
+            <div class="introduction">
+                <p>Windows常用的搭建本地服务器的软件是WampServer，以及日常使用VSCode充当编译器，再加上一个实时预览的VSCode插件LiveServer，基本上就能从零搭建起一个顺手的PHP开发环境。
+                </p>
+                <p>简而言之，PHP+SQL本地开发环境 = WampServer + VSCode + LiveServer</p>
+                <div class="href"><a href="./phpEnvironment/phpEnvironment.html">查看更多</a></div>
+            </div>
+        </article>
+
+    </main>
 </body>
 
 </html>
