--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -9,7 +9,6 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156500969-1"></script>
     <script>
-        alert("PC端食用效果更佳~\n欢迎大家到留言板和教程下方评论区留言~");
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
@@ -43,7 +42,7 @@
                             </li>
                             <li>
                                 <img src="passage.svg" width="6%">
-                                <a href="../tutorial/dictionary/dictionary.html">安利两个字典APP</a>
+                                <a href="../tutorial/8051command/command.html">8051单片机汇编指令</a>
                             </li>
                         </ul>
                     </div>
