--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -27,8 +27,8 @@
 
                 <div class="sortInfo">
                     <div class="updateInfo">
-                        <div class="lastUpdate">最近更新：2020.1.31</div>
-                        <div class="updateContent">更新内容：新增文章“安利两个字典APP”</div>
+                        <div class="lastUpdate">最近更新：2020.3.24</div>
+                        <div class="updateContent">更新内容：SSR教程第4.0版</div>
                     </div>
                     <div class="sortCatalog">
                         <ul>
@@ -61,8 +61,8 @@
 
                 <div class="sortInfo">
                     <div class="updateInfo">
-                        <div class="lastUpdate">最近更新：2020.1.30</div>
-                        <div class="updateContent">更新内容：新增“WebHook设置方法”</div>
+                        <div class="lastUpdate">最近更新：2020.4.24</div>
+                        <div class="updateContent">更新内容：新增“frp远程桌面教程”</div>
                     </div>
                     <div class="sortCatalog">
                         <ul>
